Alterações e melhorias feitas

--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
       Discovery if you know about the Biggest Singer Pop of history in this
       Quiz! Test now!
     </div>
+    <div class="by">
+      <p class="school">School - ETEC Eudécio Luiz Vicente - Adamantina</p>
+      <p class="teacher">Aline Borro - English teacher</p>
+      <p class="students">
+        Students - Renan Albuquerque, Otávio Fernanado, Henrique Cardoso dos
+        Santos, João Pedro Passarini and João Vitor Gavazzi Veiga Amaro
+      </p>
+      <p class="code">Code by Renan Albuquerque</p>
+    </div>
     <script src="script.js"></script>
     <script src="ball.js"></script>
     <script src="randomImages.js"></script>
