--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
       <h1 class="jackson">Jackson</h1>
     </div>
     <div class="text-about">
-      Discovery if you know about the Biggest Singer Pop of history in this
-      Quiz! Test now!
+      Find out if know about the biggest pop singerin history with this quiz!
     </div>
     <div class="by">
       <p class="school">School - ETEC Eudécio Luiz Vicente - Adamantina</p>
