--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
       <h1 class="jackson">Jackson</h1>
     </div>
     <div class="text-about">
-      Find out if know about the biggest pop singerin history with this quiz!
+      Find out if know about the biggest pop singer in history with this quiz!
     </div>
     <div class="by">
       <p class="school">School - ETEC Eudécio Luiz Vicente - Adamantina</p>
       <p class="teacher">Aline Borro - English teacher</p>
       <p class="students">
-        Students - Renan Albuquerque, Otávio Fernanado, Henrique dos Santos
+        Students - Renan Albuquerque, Otávio Fernando, Henrique dos Santos
         Cardoso, João Pedro Passarini and João Vitor Gavazzi Veiga Amaro
       </p>
       <p class="code">Code by Renan Albuquerque</p>
