--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="by">
       <p class="school">School - ETEC Eudécio Luiz Vicente - Adamantina</p>
-      <p class="teacher">Aline Borro - English teacher</p>
+      <p class="teacher">English teacher - Aline Borro</p>
       <p class="students">
         Students - Renan Albuquerque, Otávio Fernando, Henrique dos Santos
         Cardoso, João Pedro Passarini and João Vitor Gavazzi Veiga Amaro
